# fermion

./: .gitignore  CMakeLists.txt  README.md  bitbucket-pipelines.yml  environment.yml  setup.sh
src/gsi/: common_api.c  common_api.h  fragments.py  gal-fast-funcs.h  gsi_sim_config.c  gsi_sim_config.h  libapl.c  libapl.h  libgal.c  libgal.h  libgdl.c  libgdl.h  libgvml.c  libgvml.h  libgvml_element_wise.h  libgvml_memory.h  libsys.c  libsys.h  rsp.c  rsp.h
src/gsi/baryon/: apuc.c  apuc.h  constants.h  fifo.c  fifo.h  operations.c  operations.h  seu_layer.c  seu_layer.h
src/gsi/lepton/: apuc.c  apuc.h  constants.h  fragments.py  operations.c  operations.h  seu.h  seu_layer.c  seu_layer.h
src/gsi/libsys/: assert.h  debug.h  error.h  libc.h  log.h  types.h
src/lepton/: apuc.c  apuc.h  main.c  operations.c  operations.h  seu.h  test
test/: CMakeLists.txt  lepton_rapidcheck_parser.cpp  lepton_rapidcheck_parser.h  lepton_test.c  lepton_test.h  lepton_test_matvec.c  lepton_test_matvec.h  rapidcheck.yml  rapidcheck_parser.cpp  rapidcheck_parser.h  test_baryon.cpp  test_lepton.cpp  test_matvec.cpp  test_matvec.h
test/gsi/: CMakeLists.txt  fixtures.cpp  fixtures.h  lepton_test_gvml_add_u16.c  lepton_test_gvml_add_u16.h  lepton_test_gvml_cpy_imm_16.c  lepton_test_gvml_cpy_imm_16.h  lepton_test_gvml_mul_u16.c  lepton_test_gvml_mul_u16.h  lepton_test_gvml_store_load_16.c  lepton_test_gvml_store_load_16.h  lepton_test_gvml_store_load_vmr_16.c  lepton_test_gvml_store_load_vmr_16.h  lepton_test_libgal.c  lepton_test_libgal.h  lepton_test_libgvml.c  lepton_test_libgvml.h  test_gvml_add_u16.cpp  test_gvml_cpy_imm_16.cpp  test_gvml_init.cpp  test_gvml_mul_u16.cpp  test_gvml_store_load_16.cpp  test_gvml_store_load_vmr_16.cpp  test_libgal.cpp  test_libgvml.cpp  test_libgvml.h
test/gsi/baryon/: CMakeLists.txt  comparators.cpp  comparators.h  fixtures.cpp  fixtures.h  generators.cpp  generators.h  test_apuc.cpp  test_brsp16.cpp  test_ggl_from_l1.cpp  test_ggl_from_rl.cpp  test_ggl_from_rl_and_l1.cpp  test_gl_from_rl.cpp  test_l1_from_ggl.cpp  test_l1_from_lgl.cpp  test_l2_from_lgl.cpp  test_lgl_from_l1.cpp  test_lgl_from_l2.cpp  test_operations.cpp  test_rl_and_eq_inv_sb.cpp  test_rl_and_eq_inv_src.cpp  test_rl_and_eq_sb.cpp  test_rl_and_eq_sb_and_inv_src.cpp  test_rl_and_eq_sb_and_src.cpp  test_rl_and_eq_src.cpp  test_rl_from_inv_sb.cpp  test_rl_from_inv_sb_and_inv_src.cpp  test_rl_from_inv_sb_and_src.cpp  test_rl_from_inv_src.cpp  test_rl_from_sb.cpp  test_rl_from_sb_and_inv_src.cpp  test_rl_from_sb_and_src.cpp  test_rl_from_sb_or_inv_src.cpp  test_rl_from_sb_or_src.cpp  test_rl_from_sb_xor_inv_src.cpp  test_rl_from_sb_xor_src.cpp  test_rl_from_src.cpp  test_rl_or_eq_inv_src.cpp  test_rl_or_eq_sb.cpp  test_rl_or_eq_sb_and_inv_src.cpp  (+26 more)
test/gsi/lepton/: CMakeLists.txt  comparators.cpp  comparators.h  fixtures.cpp  fixtures.h  generators.cpp  generators.h  lepton_test_apuc.c  lepton_test_apuc.h  lepton_test_ggl_from_l1.c  lepton_test_ggl_from_l1.h  lepton_test_ggl_from_rl.c  lepton_test_ggl_from_rl.h  lepton_test_gl_from_rl.c  lepton_test_gl_from_rl.h  lepton_test_l1_from_ggl.c  lepton_test_l1_from_ggl.h  lepton_test_l1_from_lgl.c  lepton_test_l1_from_lgl.h  lepton_test_l2_from_lgl.c  lepton_test_l2_from_lgl.h  lepton_test_lgl_from_l1.c  lepton_test_lgl_from_l1.h  lepton_test_lgl_from_l2.c  lepton_test_lgl_from_l2.h  lepton_test_rl_from_sb.c  lepton_test_rl_from_sb.h  lepton_test_rl_from_sb_or_src.c  lepton_test_rl_from_sb_or_src.h  lepton_test_rl_from_src.c  lepton_test_rl_from_src.h  lepton_test_rl_or_eq_sb.c  lepton_test_rl_or_eq_sb.h  lepton_test_rl_xor_eq_sb.c  lepton_test_rl_xor_eq_sb.h  lepton_test_rl_xor_eq_src.c  lepton_test_rl_xor_eq_src.h  lepton_test_sb_from_src.c  lepton_test_sb_from_src.h  lepton_test_src.c  (+59 more)
